--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "mermaid": "^11.12.2",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "@fontsource/noto-sans-sc": "^5.1.0",
+    "@fontsource/quicksand": "^5.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-force-graph-2d": "^1.29.0",
